<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_photo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/default_recipe"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/recipe_photo"
                android:layout_alignParentTop="true"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/til_quantity"
                android:text="@string/til_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/recipe_photo"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tv_name"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/til_quantity"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tv_name"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/til_cost_price"
                android:text="@string/til_cost_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_quantity"
                android:layout_toRightOf="@+id/recipe_photo"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/til_cost_price"
                android:layout_below="@+id/tv_quantity"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/til_price_meal"
                android:text="@string/til_price_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/recipe_photo"
                android:layout_below="@+id/tv_price"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/til_price_meal"
                android:layout_below="@+id/tv_price"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>